docs: complete v0.3 research
Research for test quality tools (JaCoCo + PIT):
- STACK-TEST-QUALITY.md: JaCoCo 0.8.14, PIT 1.22.0, pitest-junit5-plugin 1.2.3
- FEATURES-TEST-QUALITY.md: Table stakes and differentiators for coverage/mutation
- ARCHITECTURE-TEST-QUALITY.md: Maven lifecycle integration patterns
- PITFALLS.md: argLine merging, IT exclusion, version compatibility
- SUMMARY.md: 3-phase roadmap (JaCoCo -> IT coverage -> PIT)

Key findings:
- Stack: JaCoCo 0.8.14 + PIT 1.22.0 verified for Java 21
- Architecture: @{argLine} late evaluation required for Surefire/Failsafe
- Critical pitfall: argLine overwritten causes silent 0% coverage

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>